--- a/output.html
+++ b/output.html
@@ -1626,6 +1626,11 @@ display: none;
 </div>
 
 
+<div id="links" class="section level2">
+<h2>Links:</h2>
+<p>All analysis code and datasets used in this project are available at:
+<a href="https://github.com/ey2166/Behavioral-RP-Recruiting-Winter" class="uri">https://github.com/ey2166/Behavioral-RP-Recruiting-Winter</a></p>
+</div>
 <div id="research-question-hypothesis" class="section level2">
 <h2>Research question (hypothesis)</h2>
 <p>Research question: How does the gender of the other party influence
