--- a/output.html
+++ b/output.html
@@ -1628,8 +1628,8 @@ display: none;
 
 <div id="links" class="section level2">
 <h2>Links:</h2>
-<p>All analysis code and datasets used in this project are available at:
-<a href="https://github.com/ey2166/Behavioral-RP-Recruiting-Winter" class="uri">https://github.com/ey2166/Behavioral-RP-Recruiting-Winter</a></p>
+<p>All analysis code and datasets used in this project are available:
+.</p>
 </div>
 <div id="research-question-hypothesis" class="section level2">
 <h2>Research question (hypothesis)</h2>
